--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=24">
+  <link rel="stylesheet" href="./main.css?v=25">
 </head>
 
 <body id="body">
@@ -38,6 +38,7 @@
             <option value="BallroomLatin">Ballroom/Latin</option>
             <option value="Greek">Greek</option>
             <option value="Bulgarian">Bulgarian</option>
+            <option value="Tahitian">Tahitian</option>
           </select>
           <select name="rhythmSelector" id="rhythmSelector" autocomplete="off">
             <option value="init">init</option>
@@ -261,7 +262,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=24"></script>
+  <script type="module" src="./modules/script.js?v=25"></script>
 </body>
 
 </html>
