pattern added, open hi-hat bug fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=25">
+  <link rel="stylesheet" href="./main.css?v=26">
 </head>
 
 <body id="body">
@@ -79,8 +79,8 @@
         <canvas id="pattern"></canvas>
       </div>
       <div id="keyInfo">
-        You can also play an instrument by pressing the key that is indicated behind it (shift=louder) or by clicking on
-        the name.
+        You can also play an instrument by pressing the key that is indicated behind it (shift=louder), by clicking on
+        the name or by pressing the Play pads button.
       </div>
       <div class="flex">
         <div id="input">
@@ -262,7 +262,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=25"></script>
+  <script type="module" src="./modules/script.js?v=26"></script>
 </body>
 
 </html>
