Export DR for Windows made

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <button type="button" id="newButton">New</button>
           <button type="button" id="openButton">Open</button>
           <button type="button" id="saveButton">Save</button>
+          <button type="button" id="exportButton">Export</button>
         </div>
         <div id="tempo">
           <label for="tempoSlider">Tempo</label>
