--- a/index.html
+++ b/index.html
@@ -68,13 +68,6 @@
             <option value="1">Greek percussion</option>
           </select>
         </div>
-        <fieldset>
-          <legend>Measures to play (empty=all)</legend>
-          <div id="measuresToPlay">
-            <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="" autocomplete="off">
-            <label for="measuresToPlayInput">Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
-          </div>
-        </fieldset>
       </div>
       <div id="patternContainer">
         <canvas id="pattern"></canvas>
@@ -120,11 +113,19 @@
         </div>
         <button type="button" id="startStopButton">Start/Stop</button>
         <button type="button" id="playPadsButton">Play pads</button>
-        <button type="button" id="testButton" hidden>TEST</button>
+        <button type="button" id="testButton">TEST</button>
       </div>
 
-      <fieldset>
-        <legend>Measure</legend>
+      <div id="tabs">
+        <div class="tab" id="tabMeasure">Measure</div>
+        <div class="tab" id="tabReverb">Reverb</div>
+        <div class="tab" id="tabPreferences">Preferences</div>
+        <div class="tab" id="tabTools">Tools</div>
+        <div class="tab" id="tabRandom">Random</div>
+        <div class="tab" id="tabEuclidean">Euclidean</div>
+      </div>
+
+      <div class="tabPage" id="tpMeasure">
         <div class="group">
           <button type="button" id="previousMeasureButton">Previous</button>
           <button type="button" id="nextMeasureButton">Next</button>
@@ -146,9 +147,17 @@
           <label for="endsWithFill">Ends with fill</label>
           <input type="checkbox" id="endsWithFill" name="endsWithFill">
         </div>
-      </fieldset>
-      <fieldset>
-        <legend>Reverb</legend>
+        <div class="forceBreak">
+          <fieldset>
+            <legend>Measures to play (empty=all)</legend>
+            <div id="measuresToPlay">
+              <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="" autocomplete="off">
+              <label for="measuresToPlayInput">Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+      <div class="tabPage" id="tpReverb">
         <div id="reverbType">
           <label for="reverbTypeSelector">Type</label>
           <select name="reverbTypeSelector" id="reverbTypeSelector" autocomplete="off">
@@ -173,9 +182,8 @@
           <input type="range" min="0" max="100" value="15" id="reverbWetSlider" autocomplete="off">
           <div id="reverbWetValue"></div>
         </div>
-      </fieldset>
-      <fieldset>
-        <legend>Preferences</legend>
+      </div>
+      <div class="tabPage" id="tpPreferences">
         <div id="additional">
           <select name="additionalSelector" id="additionalSelector" autocomplete="off">
             <option value="0">Never</option>
@@ -214,9 +222,8 @@
           <label for="expert">Expert</label>
           <input type="checkbox" id="expert" name="expert">
         </div>
-      </fieldset>
-      <fieldset>
-        <legend>Tools</legend>
+      </div>
+      <div class="tabPage" id="tpTools">
         <div id="presetPattern" class="group">
           <select name="presetPatternInstrument" id="presetPatternInstrument" autocomplete="off">
             <option value="0">Closed hi-hat</option>
@@ -256,9 +263,8 @@
           <button type="button" id="multiplyDivisionsByTwo">Div x 2</button>
           <button type="button" id="divideDivisionsByTwo">Div / 2</button>
         </div>
-      </fieldset>
-      <fieldset>
-        <legend>Create random rhythm</legend>
+      </div>
+      <div class="tabPage" id="tpRandom">
         <div>
           <label for="randomRhythmAlgorithmSelector">Algorithm</label>
           <select name="randomRhythmAlgorithmSelector" id="randomRhythmAlgorithmSelector" autocomplete="off">
@@ -304,7 +310,9 @@
           </select>
         </div>
         <button type="button" id="randomRhythmButton">Create</button>
-      </fieldset>
+      </div>
+      <div class="tabPage" id="tpEuclidean">
+      </div>
     </main>
   </div>
   <div id="playScreen">
