Euclidean method 3 added, code and tests improved

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <button type="button" id="startStopButton">Start/Stop</button>
         <button type="button" id="playPadsButton">Play pads</button>
-        <button type="button" id="testButton" hidden>TEST</button>
+        <button type="button" id="testButton" >TEST</button>
       </div>
 
       <div id="tabs">
@@ -331,9 +331,10 @@
         <div>
           <label for="euclideanMethod">Method</label>
           <select name="euclideanMethod" id="euclideanMethod" autocomplete="off">
-            <option value="1">Euclidean 1</option>
-            <option value="2">Euclidean 2</option>
-            <option value="3">Quadratic</option>
+            <option value="Euclidean1">Euclidean 1</option>
+            <option value="Euclidean2">Euclidean 2</option>
+            <option value="Euclidean3">Euclidean 3</option>
+            <option value="Quadratic">Quadratic</option>
           </select>
         </div>
         <div>
