store expert setting, test added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=42">
+  <link rel="stylesheet" href="./main.css?v=43">
 </head>
 
 <body id="body">
@@ -126,7 +126,7 @@
         </div>
         <button type="button" id="startStopButton">Start/Stop</button>
         <button type="button" id="playPadsButton">Play pads</button>
-        <button type="button" id="testButton" >TEST</button>
+        <button type="button" id="testButton" hidden>TEST</button>
       </div>
 
       <div id="tabs">
@@ -382,7 +382,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=42"></script>
+  <script type="module" src="./modules/script.js?v=43"></script>
 </body>
 
 </html>
