--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=43">
+  <link rel="stylesheet" href="./main.css?v=44">
 </head>
 
 <body id="body">
@@ -335,6 +335,7 @@
             <option value="Euclidean2">Euclidean 2</option>
             <option value="Euclidean3">Euclidean 3</option>
             <option value="Quadratic">Quadratic</option>
+            <option value="GolombRuler">Golomb ruler</option>
           </select>
         </div>
         <div>
@@ -345,7 +346,7 @@
           </select>
         </div>
         <div>
-          <label for="euclideanOnsets">Onsets</label>
+          <label id="euclideanOnsetsLabel" for="euclideanOnsets">Onsets</label>
           <input type="text" class="numberInput" id="euclideanOnsets" name="euclideanOnsets" value="1"
             autocomplete="off">
         </div>
@@ -382,7 +383,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=43"></script>
+  <script type="module" src="./modules/script.js?v=44"></script>
 </body>
 
 </html>
