--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
           <label id="euclideanOnsetsLabel" for="euclideanOnsets">Onsets</label>
           <input type="text" class="numberInput" id="euclideanOnsets" name="euclideanOnsets" value="1"
             autocomplete="off">
+            <button type="button" id="euclideanOnsetsInc">+</button>
         </div>
         <div>
           <label for="euclideanRotation">Rotation</label>
