golomb info added

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
           <label for="euclideanAllMeasures">All measures</label>
           <input type="checkbox" id="euclideanAllMeasures" name="euclideanAllMeasures">
         </div>
+        <button type="button" id="golombInfo">Golomb?</button>
         <button type="button" id="euclideanCreate">Create</button>
         <div class="forceBreak">
           <div id="euclideanInfo">info</div>
