inc rotation added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=44">
+  <link rel="stylesheet" href="./main.css?v=45">
 </head>
 
 <body id="body">
@@ -349,12 +349,13 @@
           <label id="euclideanOnsetsLabel" for="euclideanOnsets">Onsets</label>
           <input type="text" class="numberInput" id="euclideanOnsets" name="euclideanOnsets" value="1"
             autocomplete="off">
-            <button type="button" id="euclideanOnsetsInc">+</button>
+          <button type="button" id="euclideanOnsetsIncButton">+</button>
         </div>
         <div>
           <label for="euclideanRotation">Rotation</label>
           <input type="text" class="numberInput" id="euclideanRotation" name="euclideanRotation" value="0"
             autocomplete="off">
+          <button type="button" id="euclideanRotationIncButton">+</button>
         </div>
         <div>
           <label for="euclideanCombine">Combine</label>
@@ -373,7 +374,7 @@
           <label for="euclideanAllMeasures">All measures</label>
           <input type="checkbox" id="euclideanAllMeasures" name="euclideanAllMeasures">
         </div>
-        <button type="button" id="golombInfo">Golomb?</button>
+        <button type="button" id="golombInfoButton">Golomb?</button>
         <button type="button" id="euclideanCreate">Create</button>
         <div class="forceBreak">
           <div id="euclideanInfo">info</div>
@@ -385,7 +386,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=44"></script>
+  <script type="module" src="./modules/script.js?v=45"></script>
 </body>
 
 </html>
