dec onsets and dec rotation added

--- a/index.html
+++ b/index.html
@@ -347,12 +347,14 @@
         </div>
         <div>
           <label id="euclideanOnsetsLabel" for="euclideanOnsets">Onsets</label>
+          <button type="button" id="euclideanOnsetsDecButton">-</button>
           <input type="text" class="numberInput" id="euclideanOnsets" name="euclideanOnsets" value="1"
             autocomplete="off">
           <button type="button" id="euclideanOnsetsIncButton">+</button>
         </div>
         <div>
           <label for="euclideanRotation">Rotation</label>
+          <button type="button" id="euclideanRotationDecButton">-</button>
           <input type="text" class="numberInput" id="euclideanRotation" name="euclideanRotation" value="0"
             autocomplete="off">
           <button type="button" id="euclideanRotationIncButton">+</button>
